// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminPage should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          This form is required to get started with Reapit Payments.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
        </p>
        <button
          class="el-mb3 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-critical el-button"
        >
          Save Config
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-danger el-button"
        >
          Delete Config
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Reapit Payments App Configuration
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Admin
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        This form is required to get started with Reapit Payments.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
      </p>
      <button
        class="el-mb3 el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-critical el-button"
      >
        Save Config
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-danger el-button"
      >
        Delete Config
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Reapit Payments App Configuration
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot with config data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          This form is required to get started with Reapit Payments.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
        </p>
        <button
          class="el-mb3 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-critical el-button"
        >
          Save Config
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-danger el-button"
        >
          Delete Config
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Reapit Payments App Configuration
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-mb7 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Your app is not currently configured to use Reapit Payments. For the app to work correctly, you will need to provide us with both your Opayo Credentials as specified in the documentation, your company name and a url to your company logo. Please ensure these credentials are entered accurately as failure to do so can lead to the app failing for all users.
          </div>
        </div>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="vendorName"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Vendor Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-med"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="logoUri"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email Logo Url
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="integrationKey"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Integration Key
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="passKey"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Pass Key
                </label>
              </div>
            </div>
          </div>
        </form>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Admin
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        This form is required to get started with Reapit Payments.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
      </p>
      <button
        class="el-mb3 el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-critical el-button"
      >
        Save Config
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-danger el-button"
      >
        Delete Config
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Reapit Payments App Configuration
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-mb7 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          Your app is not currently configured to use Reapit Payments. For the app to work correctly, you will need to provide us with both your Opayo Credentials as specified in the documentation, your company name and a url to your company logo. Please ensure these credentials are entered accurately as failure to do so can lead to the app failing for all users.
        </div>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="vendorName"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Vendor Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-med"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="logoUri"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Email Logo Url
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="integrationKey"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Integration Key
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="passKey"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Pass Key
              </label>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AdminPage should match a snapshot with no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Admin
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          This form is required to get started with Reapit Payments.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
        </p>
        <button
          class="el-mb3 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-critical el-button"
        >
          Save Config
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb3 el-intent-danger el-button"
        >
          Delete Config
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <div
          class="el-flex-justify-between el-flex-container"
        >
          <h1
            class="el-title"
          >
            Reapit Payments App Configuration
          </h1>
          <div
            class="logo"
          >
            <img
              src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
            />
          </div>
        </div>
        <div
          class="el-mb7 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Your app is not currently configured to use Reapit Payments. For the app to work correctly, you will need to provide us with both your Opayo Credentials as specified in the documentation, your company name and a url to your company logo. Please ensure these credentials are entered accurately as failure to do so can lead to the app failing for all users.
          </div>
        </div>
        <form>
          <div
            class="el-form-layout-has-margin el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="companyName"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Company Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="vendorName"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Vendor Name
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-med"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="logoUri"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Email Logo Url
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="integrationKey"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Integration Key
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="passKey"
                  type="email"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Opayo Pass Key
                </label>
              </div>
            </div>
          </div>
        </form>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <aside
      class="el-secondary-nav-container"
    >
      <h1
        class="el-title"
      >
        Admin
      </h1>
      <span
        class="el-mb5 el-icon-size-large el-icon"
      >
        <svg />
      </span>
      <p
        class="el-has-grey-text el-small-text"
      >
        This form is required to get started with Reapit Payments.
      </p>
      <p
        class="el-has-grey-text el-small-text"
      >
        Please take the time to read the documentation at the below link before proceeding as this details the setup intructions you need to perform in your Opayo account to complete this configuration.
      </p>
      <button
        class="el-mb3 el-intent-neutral el-button"
      >
        View Docs
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-critical el-button"
      >
        Save Config
        <div
          class="el-button-loader"
        />
      </button>
      <button
        class="el-mb3 el-intent-danger el-button"
      >
        Delete Config
        <div
          class="el-button-loader"
        />
      </button>
    </aside>
    <section
      class="el-page-container"
    >
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Reapit Payments App Configuration
        </h1>
        <div
          class="logo"
        >
          <img
            src="https://web-components.prod.paas.reapit.cloud/reapit-payments.png"
          />
        </div>
      </div>
      <div
        class="el-mb7 el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          Your app is not currently configured to use Reapit Payments. For the app to work correctly, you will need to provide us with both your Opayo Credentials as specified in the documentation, your company name and a url to your company logo. Please ensure these credentials are entered accurately as failure to do so can lead to the app failing for all users.
        </div>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="companyName"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Company Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="vendorName"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Vendor Name
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-med"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="logoUri"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Email Logo Url
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="integrationKey"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Integration Key
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="passKey"
                type="email"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Opayo Pass Key
              </label>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
